# Reading-Wiki

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  try_adapter.py
.github/workflows/: quality.yml
deploy/: install-tideglass-deploy-agent.sh  novelwiki-agy-worker.service  tideglass-deploy-agent  tideglass-deploy.service  tideglass-deploy.timer
docs/: README.md  agy-operator-runbook.md  release-runbook.md  testing.md
docs/api/: cli.md  http-api.md  http-route-inventory.md
docs/architecture/: adr-001-modular-monolith.md  adr-002-baseline-defects.md  adr-003-ai-scheduling-consistency.md  adr-004-bounded-codex-memory.md  architecture-debt.md  composition-root.md  enforcement.md  migration-completion.md  migration-equivalence-final.md  module-anatomy.md  module-ownership.md  overview.md  performance-baseline.json  platform.md  stable-compatibility-entrypoints.md  workflows-and-transactions.md
docs/concepts/: glossary.md  primer.md  spoiler-safety.md
docs/data/: database-schema.md  filesystem-layout.md
docs/frontend/: overview.md
docs/getting-started/: local-setup.md  repo-tour.md  what-is-tideglass.md
docs/modules/: README.md  acquisition.md  ai-execution.md  catalog.md  codex.md  experience.md  identity.md  narration.md  reading.md  translation.md  work.md
docs/operations/: configuration.md  deployment.md  logging.md  security.md
docs/pipelines/: ai-backends.md  background-jobs-and-quota.md  codex-build-and-ask.md  file-import.md  narration.md  scraping.md  translation.md
implementation-plan/: postgres-platform-evolution-plan.md
novelwiki/: ai_limits.py  audit.py  cli.py  quota.py
novelwiki/agent/: llm_client.py  orchestrator.py  prompts.py
scripts/: contracts.py  diagnose_agy.py  diagnose_agy_codex.py  real_browser_fixture.py  rehearse-backup-restore.sh  test_backend.py  test_real_browser.py
sidecar/: Dockerfile  ocr_server.py  requirements.txt
sidecar-tts/: Dockerfile  requirements.txt  tts_server.py
tests/: test_recap_stream.py
tools/: benchmark_queries.py  check_architecture.py  rehearsal_database.py
(+592 files in other folders)
