[project]
name = "wiki"
version = "0.1.0"
description = "Spoiler-Aware Webnovel Wiki"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "typer>=0.12.0",
    "pydantic-settings>=2.2.1",
    "asyncpg>=0.29.0",
    "bm25s>=0.2.1",
    "openai>=1.14.0",
    "selectolax>=0.3.21",
    "httpx>=0.27.0",
    "tokenizers>=0.19.1",
    "tiktoken>=0.6.0",
    "pgvector>=0.2.5",
    "numpy>=1.26.4",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["novelwiki/eval"]
python_files = ["*_tests.py", "test_*.py"]
pythonpath = ["."]
